--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 <body>
   <div class="kotak">
     <center>
-      <h3>Kalkulator Segitiga<br /></h3>
+      <marquee>
+        <h3>
+          Kalkulator Segitiga Pancen Oyee<br />
+        </h3>
+      </marquee>
     </center>
     <table class="tabel">
       <tr>
@@ -37,11 +41,14 @@
 
 
     </div>
-    <center>
-      <h3>
-        Directed By : ajiiie
-      </h3>
-    </center>
+
+    <div class="directed">
+      <center>
+        <h3>
+          Directed By : ajiiie
+        </h3>
+      </center>
+    </div>
   </div>
 
 
